--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@tanstack/react-query": "^5.66.9",
-    "@tanstack/react-query-devtools": "^5.66.9",
+    "@tanstack/react-query": "^4.29.5",
+    "@tanstack/react-query-devtools": "^4.29.6",
     "axios": "^1.8.1",
+    "dayjs": "^1.11.13",
     "moment": "^2.30.1",
+    "prop-types": "^15.8.1",
     "react": "^19.0.0",
     "react-day-picker": "^9.5.1",
     "react-dom": "^19.0.0",
@@ -21,7 +23,7 @@
     "react-modal": "^3.16.3",
     "react-router-dom": "^7.2.0",
     "react-toastify": "^9.1.2",
-    "styled-components": "^6.1.15"
+    "styled-components": "^5.3.10"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
